Add parameters for GC logging