@@ -16,7 +16,7 @@
     limitations under the License.
 
 -->
- <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.mgmtp.maven.poms</groupId>
@@ -170,6 +170,11 @@
 										<initialMemorySize>256M</initialMemorySize>
 										<maxMemorySize>256M</maxMemorySize>
 									</jvmSettings>
+									<extraArguments>
+										<extraArgument>-XX:+PrintGCDetails</extraArgument>
+										<extraArgument>-XX:+PrintGCDateStamps</extraArgument>
+										<extraArgument>-Xloggc:gclog.txt</extraArgument>
+									</extraArguments>
 								</daemon>
 							</daemons>
 						</configuration>
